# price-composer

./: Dockerfile  pyproject.toml  run-docker.sh
resources/: symbols.toml
src/price_composer/: dependencies.py  main.py
src/price_composer/api/: routes.py
src/price_composer/middleware/: symbol_middleware.py
src/price_composer/resolver/: symbol_resolver.py
src/price_composer/utils/: __init__.py  symbols.py
